--- a/caffeApp/Views/MainWindow.axaml
+++ b/caffeApp/Views/MainWindow.axaml
@@ -1,18 +1,46 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:rxui="clr-namespace:Avalonia.ReactiveUI;assembly=Avalonia.ReactiveUI"
         xmlns:vm="using:caffeApp.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:caffeApp.Views"
+        xmlns:views="using:caffeApp.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="caffeApp.Views.MainWindow"
+		x:DataType="vm:MainViewModel"
         Icon="/Assets/avalonia-logo.ico"
         Title="caffeApp">
+
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<rxui:RoutedViewHost Grid.Row="0" Router="{Binding Router}">
+			<rxui:RoutedViewHost.DefaultContent>
+				<TextBlock Text="Default content"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center" />
+			</rxui:RoutedViewHost.DefaultContent>
+			<rxui:RoutedViewHost.ViewLocator>
+				<!-- See AppViewLocator.cs section below -->
+				<views:AppViewLocator />
+			</rxui:RoutedViewHost.ViewLocator>
+		</rxui:RoutedViewHost>
+		<StackPanel Grid.Row="1" Orientation="Horizontal" Margin="15">
+			<StackPanel.Styles>
+				<Style Selector="StackPanel > :is(Control)">
+					<Setter Property="Margin" Value="2"/>
+				</Style>
+				<Style Selector="StackPanel > TextBlock">
+					<Setter Property="VerticalAlignment" Value="Center"/>
+				</Style>
+			</StackPanel.Styles>
+			<Button Content="Go next" Command="{Binding GoNext}" />
+			<Button Content="Go back" Command="{Binding GoBack}" />
+			<TextBlock Text="{Binding Router.NavigationStack.Count}" />
+		</StackPanel>
+	</Grid>
 	
-	<Design.DataContext>
-		<vm:MainViewModel/>
-	</Design.DataContext>
-	
-	<views:AdminView/>
 	
 </Window>
