--- a/caffeApp/Views/AdminView.axaml
+++ b/caffeApp/Views/AdminView.axaml
@@ -1,6 +1,9 @@
-<UserControl xmlns="https://github.com/avaloniaui"
+<rxui:ReactiveUserControl 
+			 xmlns="https://github.com/avaloniaui"
+			 x:TypeArguments="vm:AdminViewModel"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:rxui="http://reactiveui.net"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:vm="using:caffeApp.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -123,4 +126,4 @@
 	</Grid>
 	
 	
-</UserControl>
+</rxui:ReactiveUserControl>
