--- a/caffeApp/Views/Admin/UsersView.axaml
+++ b/caffeApp/Views/Admin/UsersView.axaml
@@ -1,29 +1,45 @@
 <rxui:ReactiveUserControl 
 			 xmlns="https://github.com/avaloniaui"
-			 x:TypeArguments="vm:AdminViewModel"
+			 x:TypeArguments="vm:UsersViewModel"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:rxui="http://reactiveui.net"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:vm="using:caffeApp.ViewModels"
+			 xmlns:vm="using:caffeApp.ViewModels.Admin"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="caffeApp.Views.AdminView"
-			 x:DataType="vm:AdminViewModel">
-	
+             x:Class="caffeApp.Views.Admin.UsersView"
+			 x:DataType="vm:UsersViewModel">
+
+	<UserControl.Styles>
+		<Styles>
+			<StyleInclude Source="Styles/AppStyles.axaml"/>
+			<!-- Добавьте другие стили, если необходимо -->
+		</Styles>
+	</UserControl.Styles>
 	
 	<Grid ShowGridLines="True">
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition/>
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
+
+		<StackPanel 
+			IsVisible="{Binding !SelectedUserIsVisible}"
+			Grid.Column="0"
+			VerticalAlignment="Center"
+			HorizontalAlignment="Center">
+			<TextBlock>Выберите сотрудника</TextBlock>
+		</StackPanel>
 	
 		<Grid
 			  Grid.Column="0"
+			  HorizontalAlignment="Left"
+			  Margin="20"
 			  ShowGridLines="false" 
 			  IsVisible="{Binding SelectedUserIsVisible}"
 			  x:Name="grid_selected_user">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition/>
+				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition/>
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
@@ -35,20 +51,21 @@
 			</Grid.RowDefinitions>
 
 			<TextBlock
+				Classes="h1"
 				Text="Информация о пользователе"
-				FontSize="20"
-				FontWeight="Bold"
 				VerticalAlignment="Center"
 				Grid.Column="1"
 				Grid.Row="0">
 			</TextBlock>
 			<TextBlock
+				Classes="Sub"
 				Text="ФИО:"
 				VerticalAlignment="Center"
 				HorizontalAlignment="Right"
 				Grid.Row="1">
 			</TextBlock>
 			<TextBlock
+				Classes="Sub"
 				Text="Роль:"
 				VerticalAlignment="Center"
 				HorizontalAlignment="Right"
@@ -75,6 +92,7 @@
 		<DataGrid Margin="20" ItemsSource="{Binding Users}"
           IsReadOnly="True"
 		  Grid.Column="1"
+		  SelectedItem="{Binding SelectedUser}"
           CanUserReorderColumns="True"
           CanUserResizeColumns="True"
           CanUserSortColumns="False"
@@ -83,11 +101,12 @@
 			<DataGrid.Columns>
 				<DataGridTextColumn Header="First Name"  Binding="{Binding FirstName}"/>
 				<DataGridTextColumn Header="Last Name" Binding="{Binding Surname}" />
-				<DataGridTextColumn Header="Last Name" Binding="{Binding Role}" />
 			</DataGrid.Columns>
 		</DataGrid>
 
 	</Grid>
+
+	
 	
 	
 </rxui:ReactiveUserControl>
