--- a/caffeApp/Views/MainWindow.axaml
+++ b/caffeApp/Views/MainWindow.axaml
@@ -12,11 +12,14 @@
         Title="caffeApp">
 
 	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<rxui:RoutedViewHost Grid.Row="0" Router="{Binding Router}">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="Auto"></ColumnDefinition>
+			<ColumnDefinition></ColumnDefinition>
+		</Grid.ColumnDefinitions>
+		
+		<Rectangle VerticalAlignment="Stretch" HorizontalAlignment="Right" Fill="Gray" Width="1"/>
+		
+		<rxui:RoutedViewHost Grid.Column="1" Router="{Binding Router}">
 			<rxui:RoutedViewHost.DefaultContent>
 				<TextBlock Text="Default content"
                            HorizontalAlignment="Center"
@@ -27,7 +30,7 @@
 				<views:AppViewLocator />
 			</rxui:RoutedViewHost.ViewLocator>
 		</rxui:RoutedViewHost>
-		<StackPanel Grid.Row="1" Orientation="Horizontal" Margin="15">
+		<StackPanel Grid.Column="0" Orientation="Vertical" Margin="15">
 			<StackPanel.Styles>
 				<Style Selector="StackPanel > :is(Control)">
 					<Setter Property="Margin" Value="2"/>
@@ -36,9 +39,8 @@
 					<Setter Property="VerticalAlignment" Value="Center"/>
 				</Style>
 			</StackPanel.Styles>
-			<Button Content="Go next" Command="{Binding GoNext}" />
-			<Button Content="Go back" Command="{Binding GoBack}" />
-			<TextBlock Text="{Binding Router.NavigationStack.Count}" />
+			<Button Content="Сотрудники" Command="{Binding GoNext}" />
+			<Button Content="Смены" Command="{Binding GoBack}" />
 		</StackPanel>
 	</Grid>
 	
