--- a/caffeApp/Views/AuthorizationView.axaml
+++ b/caffeApp/Views/AuthorizationView.axaml
@@ -49,9 +49,10 @@
 		/>
 		
 		<Button
+			IsEnabled="True"
 			HorizontalAlignment="Center"
 			Margin="0 20"
-			Command="{Binding}"
+			Command="{Binding SubmitCommand}"
 			Content="Подтвердить"
 		/>
 	</StackPanel>
