--- a/caffeApp/Views/Admin/RegistrationView.axaml
+++ b/caffeApp/Views/Admin/RegistrationView.axaml
@@ -68,7 +68,23 @@
 				Classes="P"
 				Margin="0 5">
 			</TextBox>
+			<TextBlock>Роль</TextBlock>
+
+			<ComboBox ItemsSource="{Binding Roles}"
+			  SelectedIndex="0"
+			  SelectedItem="{Binding Role}"
+			  Width="200"
+					  Margin="0 5"
+			  MaxDropDownHeight="300">
+				<ComboBox.ItemTemplate>
+					<DataTemplate>
+						<TextBlock Text="{Binding Name}" />
+					</DataTemplate>
+				</ComboBox.ItemTemplate>
+			</ComboBox>
+			
 			<Button 
+				Command="{Binding SignUpCommand}"
 				Margin="0 10"
 				HorizontalAlignment="Center">
 				Подтвердить
@@ -87,8 +103,8 @@
 			</TextBlock>
 			
 			<Border Grid.Column="1"
-					MaxWidth="250"
-					MinHeight="200"
+					MinWidth="100"
+					MinHeight="150"
 					BorderBrush="Black"
 					Background="Gainsboro"
 					CornerRadius="3"
@@ -96,8 +112,8 @@
 			<Image 
 				Source="{Binding UserImageBitmap}"
 				Grid.Column="1" 
-				MaxWidth="250"
-				MinHeight="200"
+				MaxWidth="300"
+				MaxHeight="300"
 				>
 
 			</Image>
@@ -117,8 +133,8 @@
 			</TextBlock>
 
 			<Border Grid.Column="1"
-					MaxWidth="250"
-					MinHeight="200"
+					MinWidth="100"
+					MinHeight="150"
 					BorderBrush="Black"
 					Background="Gainsboro"
 					CornerRadius="3"
@@ -126,8 +142,8 @@
 				<Image
 					Source="{Binding AggrementImageBitmap}"
 					Grid.Column="1"
-					MaxWidth="250"
-					MinHeight="200"
+					MaxWidth="300"
+					MaxHeight="300"
 				>
 
 				</Image>
