registration is works

--- a/caffeApp/Views/Admin/RegistrationView.axaml
+++ b/caffeApp/Views/Admin/RegistrationView.axaml
@@ -8,8 +8,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="caffeApp.Views.Admin.RegistrationView"
-			 x:DataType="vm:RegistrationViewModel"> 
+			 x:DataType="vm:RegistrationViewModel">
 
+
+	<UserControl.Background>
+		<SolidColorBrush Color="LightYellow"/>
+	</UserControl.Background>
 
 	<UserControl.Styles>
 		<Styles>
