--- a/caffeApp/Views/Admin/UsersView.axaml
+++ b/caffeApp/Views/Admin/UsersView.axaml
@@ -6,10 +6,17 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:vm="using:caffeApp.ViewModels.Admin"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" 
+			 d:DesignWidth="800"
+			 d:DesignHeight="450"
              x:Class="caffeApp.Views.Admin.UsersView"
 			 x:DataType="vm:UsersViewModel">
-
+			
+			
+	<UserControl.Background>
+        <SolidColorBrush Color="LightYellow"/>
+    </UserControl.Background>
+		
 	<UserControl.Styles>
 		<Styles>
 			<StyleInclude Source="avares://caffeApp/Designer/Styles/AppStyles.axaml"/>
@@ -30,12 +37,12 @@
 			HorizontalAlignment="Center">
 			<TextBlock>Выберите сотрудника</TextBlock>
 		</StackPanel>
-	
-		<Grid
+	<ScrollViewer>
+				<Grid 
 			  Grid.Column="0"
 			  HorizontalAlignment="Left"
 			  Margin="20"
-			  ShowGridLines="false" 
+			  ShowGridLines="False" 
 			  IsVisible="{Binding SelectedUserIsVisible}"
 			  x:Name="grid_selected_user">
 			<Grid.ColumnDefinitions>
@@ -43,20 +50,30 @@
 				<ColumnDefinition/>
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
-				<RowDefinition/>
-				<RowDefinition/>
-				<RowDefinition/>
-				<RowDefinition/>
-				<RowDefinition/>
+				<RowDefinition MinHeight="50"/>
+				<RowDefinition MinHeight="50"/>
+				<RowDefinition MinHeight="50"/>
+				<RowDefinition MinHeight="50"/>
+				<RowDefinition MinHeight="50"/>
 			</Grid.RowDefinitions>
-
-			<TextBlock
-				Classes="h1"
-				Text="Информация о пользователе"
-				VerticalAlignment="Center"
+				
+			<Image 
+				Margin="10"
+				MaxHeight="100"
+				MaxWidth="100"
+				Source="{Binding ImageUser}">
+			</Image>
+						
+			<Image 
+				Margin="10"
+				HorizontalAlignment="Center"
+				Grid.Row="3"
 				Grid.Column="1"
-				Grid.Row="0">
-			</TextBlock>
+				MaxHeight="1000"
+				MaxWidth="500"
+				Source="{Binding ImageAggreemnt}">
+			</Image>
+			
 			<TextBlock
 				Classes="Sub"
 				Text="ФИО:"
@@ -70,6 +87,14 @@
 				VerticalAlignment="Center"
 				HorizontalAlignment="Right"
 				Grid.Row="2">
+			</TextBlock>
+			
+			<TextBlock
+				Classes="Sub"
+				Text="Скан договора:"
+				VerticalAlignment="Center"
+				HorizontalAlignment="Right"
+				Grid.Row="3">
 			</TextBlock>
 
 			<TextBlock
@@ -87,7 +112,21 @@
 				HorizontalAlignment="Left"
 				Text="{Binding UserRole.Name}">
 			</TextBlock>
+			
+		<StackPanel 
+			HorizontalAlignment="Center"
+			Grid.Row="5"
+			Grid.Column="0">
+		    <Button 
+				Margin="0 10">
+				Редактировать
+			</Button>
+			<Button>Уволить</Button>
+		</StackPanel>
+		
 		</Grid>
+	</ScrollViewer>
+
 		<StackPanel Grid.Column="1">
 			<DataGrid Margin="20" ItemsSource="{Binding Users}"
 					IsReadOnly="True"
@@ -97,10 +136,14 @@
 					CanUserSortColumns="False"
 					GridLinesVisibility="All"
 					BorderThickness="1" BorderBrush="Gray">
+				
 				<DataGrid.Columns>
 					<DataGridTextColumn Header="Фамилия"  Binding="{Binding FirstName}"/>
 					<DataGridTextColumn Header="Имя"  Binding="{Binding SecondName}"/>
 					<DataGridTextColumn Header="Отчетсво" Binding="{Binding Surname}" />
+					<DataGridTextColumn Header="Роль" Binding="{Binding Role.Name}" />
+					
+
 				</DataGrid.Columns>
 			</DataGrid>
 			<Button
