--- a/caffeApp/Views/Admin/UsersView.axaml
+++ b/caffeApp/Views/Admin/UsersView.axaml
@@ -6,6 +6,7 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:vm="using:caffeApp.ViewModels.Admin"
+			 xmlns:local="clr-namespace:caffeApp.utils"
              mc:Ignorable="d" 
 			 d:DesignWidth="800"
 			 d:DesignHeight="450"
@@ -16,15 +17,18 @@
 	<UserControl.Background>
         <SolidColorBrush Color="LightYellow"/>
     </UserControl.Background>
-		
+
+	<UserControl.Resources>
+		<local:IsFiredToStatusConverter x:Key="IsFiredToStatusConverter" />
+	</UserControl.Resources>
+	
 	<UserControl.Styles>
 		<Styles>
 			<StyleInclude Source="avares://caffeApp/Designer/Styles/AppStyles.axaml"/>
-			<!-- Добавьте другие стили, если необходимо -->
 		</Styles>
 	</UserControl.Styles>
 	
-	<Grid ShowGridLines="True">
+	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
@@ -117,11 +121,11 @@
 			HorizontalAlignment="Center"
 			Grid.Row="5"
 			Grid.Column="0">
-		    <Button 
-				Margin="0 10">
-				Редактировать
-			</Button>
-			<Button>Уволить</Button>
+			
+			<Button
+				Command="{Binding SetStatusFired}"
+				Content="{Binding ButtonFiredText}"
+				/>
 		</StackPanel>
 		
 		</Grid>
@@ -142,7 +146,15 @@
 					<DataGridTextColumn Header="Имя"  Binding="{Binding SecondName}"/>
 					<DataGridTextColumn Header="Отчетсво" Binding="{Binding Surname}" />
 					<DataGridTextColumn Header="Роль" Binding="{Binding Role.Name}" />
-					
+					<DataGridTemplateColumn Header="Статус">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding isFired, Converter={StaticResource IsFiredToStatusConverter}}"
+										   VerticalAlignment="Center"
+										   HorizontalAlignment="Center"/>
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
 
 				</DataGrid.Columns>
 			</DataGrid>
