--- a/caffeApp/Views/Waiter/AddOrderView.axaml
+++ b/caffeApp/Views/Waiter/AddOrderView.axaml
@@ -18,7 +18,6 @@
 
 		<StackPanel
 			Margin="30">
-			
 			<TextBlock 
 				HorizontalAlignment="Center"
 				Margin="0 20">
@@ -55,7 +54,16 @@
 					</DataTemplate>
 				</ComboBox.ItemTemplate>
 			</ComboBox>
-			
+
+			<StackPanel Margin="0 5" Orientation="Horizontal">
+				
+				<TextBlock>Итого:</TextBlock>
+				
+				<TextBlock Text="{Binding SumOrder}"></TextBlock>
+				
+			</StackPanel>
+
+
 			<Button 
 				HorizontalAlignment="Center"
 				Margin="0 10">
