--- a/caffeApp/Views/OrdersView.axaml
+++ b/caffeApp/Views/OrdersView.axaml
@@ -16,8 +16,162 @@
 			<ColumnDefinition></ColumnDefinition>
 			<ColumnDefinition></ColumnDefinition>
 		</Grid.ColumnDefinitions>
+
+		<StackPanel 
+			IsVisible="{Binding !IsPaymentAction}"
+				VerticalAlignment="Center"
+				HorizontalAlignment="Center">
+					<TextBlock
+			IsVisible="{Binding !IsSelectedOrder}"
+			VerticalAlignment="Center"
+			HorizontalAlignment="Center">
+			Выберите заказ
+		</TextBlock>
+		</StackPanel>
 		
+		<ScrollViewer IsVisible="{Binding IsSelectedOrder}">
+			<StackPanel Margin="30">
+				<TextBlock>Идентификатор</TextBlock>
+				<TextBox
+					IsReadOnly="True"
+					Margin="0 10"
+					Text="{Binding SelectedOrderView.OrderId}">
+				</TextBox>
+				<TextBlock>Количество гостей</TextBlock>
+				<TextBox
+					IsReadOnly="True"
+					Margin="0 10"
+					Text="{Binding SelectedOrderView.Quantityclients}">
+				</TextBox>
+				<TextBlock>Сумма оплаты заказа</TextBlock>
+				<TextBox
+					IsReadOnly="True"
+					Margin="0 10"
+					Text="{Binding SelectedOrderView.Sum}">
+				</TextBox>
+				<TextBlock>Статус заказа</TextBlock>
+				<TextBox
+					IsReadOnly="True"
+					Margin="0 10"
+					Text="{Binding SelectedOrderView.Status}">
+				</TextBox>
+				<TextBlock>Сумма оплаты</TextBlock>
+				<TextBox
+					IsReadOnly="True"
+					Margin="0 10"
+					Text="{Binding SelectedOrderView.Sum}">
+				</TextBox>
+				<TextBlock>Блюда</TextBlock>
+				<ListBox 
+					Margin="0 10"
+					ItemsSource="{Binding SplitFoods}">
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="{Binding Name}"></TextBlock>
+								<TextBlock Text=" x"></TextBlock>
+								<TextBlock Text="{Binding Count}"></TextBlock>
+							</StackPanel>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>
+				
+				<StackPanel
+					IsVisible="{Binding IsSheff}"
+					Orientation="Horizontal">
+					<TextBlock>Изменить статус заказа:</TextBlock>
+					<ComboBox
+						SelectedItem="{Binding SelectedStatusOrder}"
+						ItemsSource="{Binding StatusesOrder}">
+						<ComboBox.ItemTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding Name}"></TextBlock>
+							</DataTemplate>
+						</ComboBox.ItemTemplate>
+					</ComboBox>
+				</StackPanel>
+				
+				<StackPanel
+					IsVisible="{Binding !IsOrderPayed}"
+					>
+					<Button
+						IsVisible="{Binding IsWaiter}"
+						Command="{Binding PaymentCommand}"
+						Margin="0 10">
+						Оплата заказа
+					</Button>
+				</StackPanel>
+				
+				<TextBlock
+					HorizontalAlignment="Center"
+					Margin="0 10"
+					IsVisible="{Binding IsOrderPayed}"	
+					FontWeight="Bold"
+					FontSize="20">
+					Заказ оплачен
+				</TextBlock>
+				
+				<StackPanel
+					IsVisible="{Binding !IsOrderPayed}">
+					 <Button 
+						IsVisible="{Binding IsAdmin}"
+						Command="{Binding OpenAddOrderForUpdateView}"
+						Height="50"
+						Width="150"
+						Margin="20"
+						VerticalAlignment="Bottom"
+						HorizontalAlignment="Center">
+						<TextBlock
+							VerticalAlignment="Center"
+							HorizontalAlignment="Center">
+							Редактировать
+						</TextBlock>
+					</Button>
+				</StackPanel>
+
+
+			</StackPanel>
+		</ScrollViewer>
+		
+		<StackPanel
+			Margin="50"
+			IsVisible="{Binding IsPaymentAction}">
+			<TextBlock
+				Margin="0 10"
+				HorizontalAlignment="Center">
+				Оплата
+			</TextBlock>	
+			
+			<RadioButton
+				GroupName="PaymentType"
+				IsChecked="{Binding IsCreditCard}">
+			    <TextBlock>Оплата картой</TextBlock>
+			</RadioButton>
+			
+			<RadioButton
+				GroupName="PaymentType"
+				IsChecked="{Binding IsCash}">
+			    <TextBlock>Оплата наличными</TextBlock>
+			</RadioButton>
+			
+			<StackPanel Margin="0 10" Orientation="Horizontal">
+				<TextBlock>Сумма оплаты: </TextBlock>
+				<TextBlock Text="{Binding SelectedOrderView.Sum}"></TextBlock>
+				<TextBlock Text=" руб."></TextBlock>
+			</StackPanel>
+			
+			<Button
+				Command="{Binding SubmitPayment}"
+				Margin="0 10"
+				HorizontalAlignment="Center">
+				Подтвердить
+			</Button>
+			
+		
+		</StackPanel>
+	
 		<Button
+			IsVisible="{Binding IsWaiter}"
 			Command="{Binding OpenAddOrderView}"
 			Height="50"
 			Width="150"
@@ -39,15 +193,39 @@
 
 			<StackPanel Margin="0 20">
 				<TextBlock Margin="0 5">Дата</TextBlock>
-				<ComboBox>
-
+				<ComboBox 
+					SelectedItem="{Binding SelectedWorkShift}"
+					ItemsSource="{Binding Workshifts}">
+					<ComboBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="{Binding Date}"></TextBlock>
+								<TextBlock> </TextBlock>
+								<TextBlock Text="{Binding Timestart}"></TextBlock>
+								<TextBlock>-</TextBlock>
+								<TextBlock Text="{Binding Timeend}"></TextBlock>
+							</StackPanel>
+						</DataTemplate>
+					</ComboBox.ItemTemplate>
 				</ComboBox>
 			</StackPanel>
 
 
 
-			<DataGrid>
-
+			<DataGrid 
+				CanUserResizeColumns="True"
+				IsReadOnly="True"
+				Height="450"
+				SelectedItem="{Binding SelectedOrderView}"
+				ItemsSource="{Binding Orders}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Идентификатор" Binding="{Binding OrderId}"></DataGridTextColumn>
+					<DataGridTextColumn Header="Дата" Binding="{Binding Dateorder}"></DataGridTextColumn>
+					<DataGridTextColumn Header="Количество гостей" Binding="{Binding Quantityclients}"></DataGridTextColumn>
+					<DataGridTextColumn Header="Место" Binding="{Binding Numberplace}"></DataGridTextColumn>
+					<DataGridTextColumn Header="Статус заказа" Binding="{Binding Status}"></DataGridTextColumn>
+					<DataGridTextColumn Header="Сумма заказа" Binding="{Binding Sum}"></DataGridTextColumn>
+				</DataGrid.Columns>
 			</DataGrid>
 
 		</StackPanel>
