--- a/caffeApp/Views/Waiter/AddOrderView.axaml
+++ b/caffeApp/Views/Waiter/AddOrderView.axaml
@@ -19,10 +19,30 @@
 		<StackPanel
 			Margin="30">
 			<TextBlock 
+				IsVisible="{Binding !IsEditOrder}"
 				HorizontalAlignment="Center"
 				Margin="0 20">
 				Добавление заказа
+			</TextBlock>	
+			
+			<TextBlock 
+				IsVisible="{Binding IsEditOrder}"
+				HorizontalAlignment="Center"
+				Margin="0 20">
+				Редактирование заказа
 			</TextBlock>
+
+			<StackPanel IsVisible="{Binding IsEditOrder}">
+				<TextBlock>Идентификатор</TextBlock>
+				<TextBox
+					IsEnabled="True"
+					HorizontalAlignment="Left"
+					Width="100"
+					Margin="0 5"
+					Text="{Binding OrderId}">
+				</TextBox>
+			</StackPanel>
+		
 			
 			<TextBlock>Количество гостей</TextBlock>
 			
@@ -65,6 +85,16 @@
 
 
 			<Button 
+				IsVisible="{Binding !IsEditOrder}"
+				Command="{Binding Submit}"
+				HorizontalAlignment="Center"
+				Margin="0 10">
+				Подтвердить
+			</Button>	
+			
+			<Button 
+				IsVisible="{Binding IsEditOrder}"
+				Command="{Binding SubmitUpdate}"
 				HorizontalAlignment="Center"
 				Margin="0 10">
 				Подтвердить
@@ -73,8 +103,8 @@
 		</StackPanel>
 
 		<StackPanel 
-			Margin="30"
-			VerticalAlignment="Center"
+			Margin="60"
+			VerticalAlignment="Top"
 			HorizontalAlignment="Center"
 			Grid.Column="1">
 
@@ -82,25 +112,47 @@
 				HorizontalAlignment="Center">
 				Выбрать блюда
 			</TextBlock>
-			
-			<ComboBox ItemsSource="{Binding Foods}"
-				  SelectedIndex="0"
-				  SelectedItem="{Binding}"
-				  Width="200"
-				  Margin="0 5"
-				  MaxDropDownHeight="300">
-				<ComboBox.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Name}"></TextBlock>
-					</DataTemplate>
-				</ComboBox.ItemTemplate>
-			</ComboBox>
+			<StackPanel Orientation="Horizontal">
+				<Button
+					Command="{Binding AddFood}">
+					+
+				</Button>
+				<ComboBox 
+					ItemsSource="{Binding Foods}"
+					SelectedItem="{Binding SelectedFood}"
+					Width="200"
+					Margin="0 5"
+					  
+					  MaxDropDownHeight="300">
+					<ComboBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="{Binding Name}"></TextBlock>
+								<TextBlock Text="   $"></TextBlock>
+								<TextBlock Text="{Binding Price}"></TextBlock>
+							</StackPanel>
+						</DataTemplate>
+					</ComboBox.ItemTemplate>
+				</ComboBox>
+				
+				<Button
+					Command="{Binding DeleteFood}">
+					-
+				</Button>
+			</StackPanel>
+
 
 			<ListBox
+				SelectedItem="{Binding SelectedFoodForDelete}"
 				ItemsSource="{Binding SelectedFoods}">
 				<ListBox.ItemTemplate>
 					<DataTemplate>
-						<TextBlock Text="{Binding Name}"></TextBlock>
+						<StackPanel Orientation="Horizontal">
+							<TextBlock Text="{Binding Name}"></TextBlock>
+							<TextBlock Text="   $"></TextBlock>
+							<TextBlock Text="{Binding Price}"></TextBlock>
+						</StackPanel>
+						
 					</DataTemplate>
 				</ListBox.ItemTemplate>
 			</ListBox>
