--- a/caffeApp/Views/ReportView.axaml
+++ b/caffeApp/Views/ReportView.axaml
@@ -6,12 +6,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" 
+			 xmlns:local="using:caffeApp.utils"
              d:DesignWidth="800" 
              d:DesignHeight="450"
 			 x:TypeArguments="vm:ReportViewModel"
              x:DataType="vm:ReportViewModel"
              x:Class="caffeApp.Views.ReportView">
-	
+
+
+	<UserControl.Resources>
+		<local:IsNonCashToConverter x:Key="IsNonCashToConverter" />
+	</UserControl.Resources>
+
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition></ColumnDefinition>
@@ -39,7 +45,6 @@
 			</TextBlock>
 		</Button>
 
-
 		<Button
 			IsVisible="{Binding !IsAdmin}"
 			Command="{Binding CreateReportWaiter}"
@@ -53,8 +58,6 @@
 				Сформировать
 			</TextBlock>
 		</Button>
-		
-		
 		
 		<StackPanel
 			Margin="20">
@@ -113,25 +116,37 @@
 					Text="Активная смена"
 					Foreground="LightGreen"
 					IsVisible="{Binding !ActiveWorkShiftNull}">
-					
 				</TextBlock>
-				
 			</StackPanel>
 
-
 			<StackPanel
+				HorizontalAlignment="Stretch"
+			    VerticalAlignment="Stretch"
 				IsVisible="{Binding !IsWarning}">
 				<DataGrid
 					IsVisible="{Binding ReportIsReady}"
 					Margin="0 10"
+					HorizontalAlignment="Stretch"
+					VerticalAlignment="Stretch"
 					ItemsSource="{Binding Orders}">
 					<DataGrid.Columns>
-						<DataGridTextColumn Header="Идентификатор" Binding="{Binding OrderId}"></DataGridTextColumn>
-						<DataGridTextColumn Header="Дата" Binding="{Binding Dateorder}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Идентификатор заказа" Binding="{Binding OrderId}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Идентификатор смены" Binding="{Binding Workshift.WorkshiftId}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Дата заказа" Binding="{Binding Dateorder}"></DataGridTextColumn>
 						<DataGridTextColumn Header="Количество гостей" Binding="{Binding Quantityclients}"></DataGridTextColumn>
-						<DataGridTextColumn Header="Место" Binding="{Binding Numberplace}"></DataGridTextColumn>
-						<DataGridTextColumn Header="Статус заказа" Binding="{Binding Status}"></DataGridTextColumn>
-						<DataGridTextColumn Header="Сумма заказа" Binding="{Binding Sum}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Место" Binding="{Binding Place.Number}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Официант" Binding="{Binding User.FirstName + User.SecondName}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Статус заказа" Binding="{Binding Statusorder.Name}"></DataGridTextColumn>
+						<DataGridTextColumn Header="Сумма заказа" Binding="{Binding Payment.Sum}"></DataGridTextColumn>
+						<DataGridTemplateColumn Header="Метод оплаты">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBlock Text="{Binding Payment.Isnoncash, Converter={StaticResource IsNonCashToConverter}}"
+											   VerticalAlignment="Center"
+											   HorizontalAlignment="Center"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
 					</DataGrid.Columns>
 				</DataGrid>
 			</StackPanel>
@@ -156,6 +171,17 @@
 				<TextBox Text="{Binding CountIsNotPayedOrders}"></TextBox>
 				<TextBlock Margin="0 5">Сумма выручки</TextBlock>
 				<TextBox Text="{Binding SumPay}"></TextBox>
+				<Button
+					Command="{Binding SaveReport}"
+					Margin="0 10"
+					HorizontalAlignment="Center"
+					Height="50">
+					<TextBlock
+						VerticalAlignment="Center"
+						HorizontalAlignment="Center">
+						Сохранить
+					</TextBlock>
+				</Button>
 			</StackPanel>
 
 			
