--- a/caffeApp/Views/Admin/RegistrationView.axaml
+++ b/caffeApp/Views/Admin/RegistrationView.axaml
@@ -12,7 +12,7 @@
 
 
 	<UserControl.Background>
-		<SolidColorBrush Color="LightYellow"/>
+		<SolidColorBrush Color="Yellow"/>
 	</UserControl.Background>
 
 	<UserControl.Styles>
@@ -22,144 +22,129 @@
 		</Styles>
 	</UserControl.Styles>
 
-	<Grid 
-		Margin="20" >
-
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="Auto"></ColumnDefinition>
-			<ColumnDefinition Width="*"></ColumnDefinition>
-		</Grid.ColumnDefinitions>
-
-		<StackPanel 
-			HorizontalAlignment="Left" 
+	<Grid Margin="20" >
+		<ScrollViewer>
+			<StackPanel
+			HorizontalAlignment="Left"
 			Width="500">
-			<TextBlock 
-				Margin="0 10"
-				Classes="h1">
-				Регистрация нового пользователя
-			</TextBlock>
-			
-			<TextBlock>
-				Логин
-			</TextBlock>
-			<TextBox
-				Text="{Binding Login}"
-				Classes="P"
-				Margin="0 5">
-			</TextBox>
-			<TextBlock>Пароль</TextBlock>
-			<TextBox
-				Text="{Binding Password}"
-				Classes="P"
-				Margin="0 5">
-			</TextBox>
-			<TextBlock>Фамилия</TextBlock>
-			<TextBox
-				Text="{Binding FirstName}"
-				Classes="P"
-				Margin="0 5">
-			</TextBox>
-			<TextBlock>Имя</TextBlock>
-			<TextBox
-				Text="{Binding SecondName}"
-				Classes="P"
-				Margin="0 5">
-			</TextBox>
-			<TextBlock>Отчетсво</TextBlock>
-			<TextBox
-				Text="{Binding Surname}"
-				Classes="P"
-				Margin="0 5">
-			</TextBox>
-			<TextBlock>Роль</TextBlock>
 
-			<ComboBox ItemsSource="{Binding Roles}"
-			  SelectedIndex="0"
-			  SelectedItem="{Binding Role}"
-			  Width="200"
-					  Margin="0 5"
-			  MaxDropDownHeight="300">
-				<ComboBox.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Name}" />
-					</DataTemplate>
-				</ComboBox.ItemTemplate>
-			</ComboBox>
-			
-			<Button 
-				Command="{Binding SignUpCommand}"
-				Margin="0 10"
-				HorizontalAlignment="Center">
-				Подтвердить
-			</Button>
-		</StackPanel>
+				<TextBlock>
+					Логин
+				</TextBlock>
+				<TextBox
+					Text="{Binding Login}"
+					Classes="N"
+					Margin="0 5">
+				</TextBox>
+				<TextBlock>Пароль</TextBlock>
+				<TextBox
+					Text="{Binding Password}"
+					Classes="N"
+					Margin="0 5">
+				</TextBox>
+				<TextBlock>Фамилия</TextBlock>
+				<TextBox
+					Text="{Binding FirstName}"
+					Classes="N"
+					Margin="0 5">
+				</TextBox>
+				<TextBlock>Имя</TextBlock>
+				<TextBox
+					Text="{Binding SecondName}"
+					Classes="N"
+					Margin="0 5">
+				</TextBox>
+				<TextBlock>Отчетсво</TextBlock>
+				<TextBox
+					Text="{Binding Surname}"
+					Classes="N"
+					Margin="0 5">
+				</TextBox>
+				<TextBlock>Роль</TextBlock>
 
-		<StackPanel 
-			Grid.Column="1"
-			VerticalAlignment="Top"
-			HorizontalAlignment="Center">
+				<ComboBox 
+				  Classes="N"
+				  ItemsSource="{Binding Roles}"
+				  SelectedIndex="0"
+				  SelectedItem="{Binding Role}"
+				  Width="200"
+						  Margin="0 5"
+				  MaxDropDownHeight="300">
+					<ComboBox.ItemTemplate>
+						<DataTemplate>
+							<TextBlock Text="{Binding Name}" />
+						</DataTemplate>
+					</ComboBox.ItemTemplate>
+				</ComboBox>
 
-			<TextBlock
-				Margin="0 5"
-				HorizontalAlignment="Center">
-				Фото пользователя
-			</TextBlock>
-			
-			<Border Grid.Column="1"
-					MinWidth="100"
-					MinHeight="150"
-					BorderBrush="Black"
-					Background="Gainsboro"
-					CornerRadius="3"
-					BorderThickness="3">
-			<Image 
-				Source="{Binding UserImageBitmap}"
-				Grid.Column="1" 
-				MaxWidth="300"
-				MaxHeight="300"
-				>
+				<TextBlock
+					Margin="0 5"
+					HorizontalAlignment="Center">
+					Фото пользователя
+				</TextBlock>
 
-			</Image>
-			</Border>
-			
-			<Button
-				Command="{Binding OpenDialogFileUserImage}"
-				Margin="0 10"
-				HorizontalAlignment="Center">
-				Добавить
-			</Button>
+				<Border 
+						MinWidth="100"
+						MinHeight="150"
+						BorderBrush="Black"
+						Background="Gainsboro"
+						CornerRadius="3"
+						BorderThickness="3">
+					<Image
+						Source="{Binding UserImageBitmap}"
+						Grid.Column="1"
+						MaxWidth="300"
+						MaxHeight="300">
+					</Image>
+				</Border>
 
-			<TextBlock
-				Margin="0 5"
-				HorizontalAlignment="Center">
-				Скан договора
-			</TextBlock>
+				<Button
+					Classes="N"
+					Command="{Binding OpenDialogFileUserImage}"
+					Margin="0 10"
+					HorizontalAlignment="Center">
+					Добавить
+				</Button>
 
-			<Border Grid.Column="1"
-					MinWidth="100"
-					MinHeight="150"
-					BorderBrush="Black"
-					Background="Gainsboro"
-					CornerRadius="3"
-					BorderThickness="3">
-				<Image
-					Source="{Binding AggrementImageBitmap}"
-					Grid.Column="1"
-					MaxWidth="300"
-					MaxHeight="300"
-				>
+				<TextBlock
+					Margin="0 5"
+					HorizontalAlignment="Center">
+					Скан договора
+				</TextBlock>
 
-				</Image>
-			</Border>
+				<Border Grid.Column="1"
+						MinWidth="100"
+						MinHeight="150"
+						BorderBrush="Black"
+						Background="Gainsboro"
+						CornerRadius="3"
+						BorderThickness="3">
+					<Image
+						Source="{Binding AggrementImageBitmap}"
+						Grid.Column="1"
+						MaxWidth="300"
+						MaxHeight="300">
 
-			<Button
-				Command="{Binding OpenDialogFileAgreementImage}"
-				Margin="0 10"
-				HorizontalAlignment="Center">
-				Добавить
-			</Button>
-			
-		</StackPanel>
+					</Image>
+				</Border>
 
+				<Button
+					Classes="N"
+					Command="{Binding OpenDialogFileAgreementImage}"
+					Margin="0 10"
+					HorizontalAlignment="Center">
+					Добавить
+				</Button>
+
+				<Button
+					Classes="N"
+					Command="{Binding SignUpCommand}"
+					Margin="0 10"
+					HorizontalAlignment="Center">
+					Подтвердить
+				</Button>
+
+			</StackPanel>
+		</ScrollViewer>
 	</Grid>
 </rxui:ReactiveUserControl>
