--- a/caffeApp/Views/Admin/UsersView.axaml
+++ b/caffeApp/Views/Admin/UsersView.axaml
@@ -15,7 +15,7 @@
 			
 			
 	<UserControl.Background>
-        <SolidColorBrush Color="LightYellow"/>
+        <SolidColorBrush Color="Yellow"/>
     </UserControl.Background>
 
 	<UserControl.Resources>
@@ -29,110 +29,82 @@
 	</UserControl.Styles>
 	
 	<Grid>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
-		</Grid.ColumnDefinitions>
+		<ScrollViewer IsVisible="{Binding !SelectedUserIsVisible}">
+			<StackPanel 
+				Margin="30">
+				<StackPanel.Styles>
+					<Style Selector="StackPanel > :is(Control)">
+						<Setter Property="Margin" Value="10"/>
+					</Style>
+				</StackPanel.Styles>
 
-		<StackPanel 
-			IsVisible="{Binding !SelectedUserIsVisible}"
-			Grid.Column="0"
-			VerticalAlignment="Center"
-			HorizontalAlignment="Center">
-			<TextBlock>Выберите сотрудника</TextBlock>
-		</StackPanel>
-	<ScrollViewer>
-				<Grid 
-			  Grid.Column="0"
-			  HorizontalAlignment="Left"
-			  Margin="20"
-			  ShowGridLines="False" 
-			  IsVisible="{Binding SelectedUserIsVisible}"
-			  x:Name="grid_selected_user">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="Auto"/>
-				<ColumnDefinition/>
-			</Grid.ColumnDefinitions>
-			<Grid.RowDefinitions>
-				<RowDefinition MinHeight="50"/>
-				<RowDefinition MinHeight="50"/>
-				<RowDefinition MinHeight="50"/>
-				<RowDefinition MinHeight="50"/>
-				<RowDefinition MinHeight="50"/>
-			</Grid.RowDefinitions>
+				<TextBlock
+					Classes="Sub"
+					Text="Фото сотрудника">
+				</TextBlock>
+
+				<Image
+					Margin="10"
+					MaxHeight="100"
+					MaxWidth="100"
+					Source="{Binding ImageUser}">
+				</Image>
 				
-			<Image 
-				Margin="10"
-				MaxHeight="100"
-				MaxWidth="100"
-				Source="{Binding ImageUser}">
-			</Image>
-						
-			<Image 
-				Margin="10"
-				HorizontalAlignment="Center"
-				Grid.Row="3"
-				Grid.Column="1"
-				MaxHeight="1000"
-				MaxWidth="500"
-				Source="{Binding ImageAggreemnt}">
-			</Image>
-			
-			<TextBlock
-				Classes="Sub"
-				Text="ФИО:"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Right"
-				Grid.Row="1">
-			</TextBlock>
-			<TextBlock
-				Classes="Sub"
-				Text="Роль:"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Right"
-				Grid.Row="2">
-			</TextBlock>
-			
-			<TextBlock
-				Classes="Sub"
-				Text="Скан договора:"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Right"
-				Grid.Row="3">
-			</TextBlock>
-
-			<TextBlock
-				Grid.Column="1"
-				Grid.Row="1"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Left"
-				Text="{Binding FullName}">
-			</TextBlock>
+				<TextBlock
+					Classes="Sub"
+					Text="ФИО">
+				</TextBlock>
+				
+				<TextBlock
+					Text="{Binding FullName}">
+				</TextBlock>
 		
-			<TextBlock
-				Grid.Column="1"
-				Grid.Row="2"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Left"
-				Text="{Binding UserRole.Name}">
-			</TextBlock>
-			
-		<StackPanel 
-			HorizontalAlignment="Center"
-			Grid.Row="5"
-			Grid.Column="0">
-			
-			<Button
-				Command="{Binding SetStatusFired}"
-				Content="{Binding ButtonFiredText}"
-				/>
-		</StackPanel>
-		
-		</Grid>
-	</ScrollViewer>
+				<TextBlock
+					Classes="Sub"
+					Text="Роль">
+				</TextBlock>
 
-		<StackPanel Grid.Column="1">
-			<DataGrid Margin="20" ItemsSource="{Binding Users}"
+				<TextBlock
+					Text="{Binding UserRole.Name}">
+				</TextBlock>
+
+				<TextBlock
+					Classes="Sub"
+					Text="Скан договора">
+				</TextBlock>
+
+				<Image
+					Margin="10"
+					MaxHeight="1000"
+					MaxWidth="500"
+					Source="{Binding ImageAggreemnt}">
+				</Image>
+				
+				
+				<Button
+					Classes="N"
+					Command="{Binding SetStatusFired}"
+					Content="{Binding ButtonFiredText}"
+					/>
+
+				<Button
+					Classes="N"
+					Command="{Binding }"
+					Content="Назад"
+					/>
+			</StackPanel>
+		</ScrollViewer>
+
+		<StackPanel
+			VerticalAlignment="Stretch"
+			HorizontalAlignment="Stretch"
+			IsVisible="{Binding !SelectedUserIsVisible}">
+			<DataGrid
+					Classes="N"
+					HorizontalAlignment="Stretch"
+					VerticalAlignment="Stretch"
+					Margin="20" 
+					ItemsSource="{Binding Users}"
 					IsReadOnly="True"
 					SelectedItem="{Binding SelectedUser}"
 					CanUserReorderColumns="True"
